tests/baselines/reference/constDeclarationShadowedByVarDeclaration.errors.txt
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(6,9): error TS2481: Cannot initialize outer scoped variable 'x' in the same scope as block scoped declaration 'x'.
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(14,13): error TS2481: Cannot initialize outer scoped variable 'y' in the same scope as block scoped declaration 'y'.
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(21,7): error TS2481: Cannot initialize outer scoped variable 'z' in the same scope as block scoped declaration 'z'.


==== tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts (3 errors) ====
    // Error as declaration of var would cause a write to the const value
    var x = 0;
    {
        const x = 0;
    
        var x = 0;
            ~
!!! error TS2481: Cannot initialize outer scoped variable 'x' in the same scope as block scoped declaration 'x'.
    }
    
    
    var y = 0;
    {
        const y = 0;
        {
            var y = 0;
                ~
!!! error TS2481: Cannot initialize outer scoped variable 'y' in the same scope as block scoped declaration 'y'.
        }
    }
    
    
    {
      const z = 0;
      var z = 0
          ~
!!! error TS2481: Cannot initialize outer scoped variable 'z' in the same scope as block scoped declaration 'z'.
    }